--- a/src/assets/index.less
+++ b/src/assets/index.less
@@ -1,74 +1,69 @@
-@import '../../node_modules/view-design/src/styles/index.less';
-//
-@table-thead-bg               :  #5cadff;
-@table-td-stripe-bg           : #f1f9ed;
-@table-td-hover-bg            : #dfffdd;
-@table-td-highlight-bg        : #ecf9d8;
+//@import '~antd/lib/style/themes/default.less';
+@import '~@ant-design/aliyun-theme/index';
 
-@layout-header-background    : #ffffff;
-@layout-header-height        : 64px;
-@layout-header-padding       : 0 0px;
-@layout-footer-padding       : 10px 50px;
-@layout-footer-background    : @layout-body-background;
-@layout-sider-background     : @layout-header-background;
-
-
-// Background color
-@background-color-base        : #f7f7f7;  // base
-@background-color-select-hover: @input-disabled-bg;
-@tooltip-bg                   : rgba(70, 76, 91, .9);
-@head-bg                      : #f9fafc;
-@table-thead-bg               : #f8f8f9;
-@table-td-stripe-bg           : #f8f8f9;
-@table-td-hover-bg            : #ebf7ff;
-@table-td-highlight-bg        : #ebf7ff;
-@menu-dark-title              : @black;
-@menu-dark-active-bg          : @black;
-@menu-dark-subsidiary-color   : @gold-6;
-@menu-dark-group-title-color  : rgba(255,255,255,.36);
-@date-picker-cell-hover-bg    : #e1f0fe;
-.@{table-prefix-cls}{
-
-   th {
-     //font-size: @font-size-base;
-     background:@primary-color  ;
-     color:@white;
-     font-size: @font-size-base ;
-    }
-  tr{
-    border-radius: 10px;
-    cursor:pointer;
-  }
-  td{
-    padding:0 0;
-  }
-}
-.@{menu-prefix-cls} {
-  &-dark&-horizontal &-item, &-dark&-horizontal &-submenu {
-    color: @menu-dark-subsidiary-color;
-    &-active, &:hover {
-      color: @gold-4;
-      border-bottom:2px solid @orange-6;
-    }
-  }
-   &-item{
-        display: block;
-        outline: none;
-        list-style: none;
-        font-size: @font-size-large;
-        position: relative;
-        z-index: 1;
-        cursor: pointer;
-        transition: all @transition-time @ease-in-out;
-    }
-  &-light&-horizontal &-item, &-light&-horizontal &-submenu{
-        height: inherit;
-        line-height: inherit;
-        border-bottom: 2px solid transparent;
-        color: @text-color;
-        &-active, &:hover{
-            color: @primary-color;
-            border-bottom: 12px solid @white;
-        }
-    }
-}
+@body-background: @black;
+@component-background: #141414;
+@icon-color-hover: fade(@white, 75%);
+@heading-color: fade(@white, 85%);
+@text-color: fade(@white, 65%);
+@text-color-secondary: fade(@white, 45%);
+@border-color-base: #434343;
+@border-color-split: @popover-background;
+@border-style-base: solid;
+@layout-body-background: @body-background;
+@layout-header-background: @component-background;
+@layout-sider-background: @component-background;
+@layout-trigger-background: @component-background;
+@font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Helvetica,
+  'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', SimSun, sans-serif;
+@font-feature-settings-base: tnum;
+@disabled-color: fade(@white, 30%);
+@disabled-color-dark: fade(@white, 30%);
+@outline-blur-size: 0;
+@background-color-light: fade(@white, 4%);
+@background-color-base: fade(@white, 8%);
+@item-hover-bg: fade(@white, 8%);
+@shadow-color: rgba(0, 0, 0, 0.45);
+@shadow-1-up: 0 -6px 16px -8px rgba(0, 0, 0, 0.24), 0 -9px 28px 0 rgba(0, 0, 0, 0.15),
+  0 -12px 48px 16px rgba(0, 0, 0, 0.09);
+@shadow-1-down: 0 6px 16px -8px rgba(0, 0, 0, 0.24), 0 9px 28px 0 rgba(0, 0, 0, 0.15),
+  0 12px 48px 16px rgba(0, 0, 0, 0.09);
+@shadow-1-left: -6px 0 16px -8px rgba(0, 0, 0, 0.08), -9px 0 28px 0 rgba(0, 0, 0, 0.05),
+  -12px 0 48px 16px rgba(0, 0, 0, 0.03);
+@shadow-1-right: 6px 0 16px -8px rgba(0, 0, 0, 0.24), 9px 0 28px 0 rgba(0, 0, 0, 0.15),
+  12px 0 48px 16px rgba(0, 0, 0, 0.09);
+@shadow-2: 0 3px 6px -4px rgba(0, 0, 0, 0.36), 0 6px 16px 0 rgba(0, 0, 0, 0.24),
+  0 9px 28px 8px rgba(0, 0, 0, 0.15);
+@btn-default-bg: transparent;
+@input-placeholder-color: fade(@white, 30%);
+@input-bg: transparent;
+@input-number-handler-active-bg: @popover-background;
+@select-item-selected-font-weight: 600;
+@tooltip-bg: #434343;
+@popover-bg: @popover-background;
+@modal-header-bg: @popover-background;
+@menu-popup-bg: @popover-background;
+@menu-dark-submenu-bg: @black;
+@table-header-bg: #1d1d1d;
+@table-header-sort-bg: #262626;
+@table-body-sort-bg: fade(@white, 1%);
+@table-row-hover-bg: #262626;
+@badge-text-color: @white;
+@card-actions-background: fade(@white, 4%);
+@card-shadow: 0 1px 2px -2px rgba(0, 0, 0, 0.48), 0 3px 6px 0 rgba(0, 0, 0, 0.36),
+  0 5px 12px 4px rgba(0, 0, 0, 0.27);
+@avatar-bg: #5a5a5a;
+@pagination-item-bg-active: transparent;
+@slider-rail-background-color: fade(@white, 20%);
+@slider-rail-background-color-hover: @slider-rail-background-color;
+@slider-track-background-color: @primary-color;
+@slider-handle-color: @primary-color;
+@skeleton-color: #303030;
+@alert-success-border-color: @green-3;
+@alert-success-bg-color: @green-1;
+@alert-info-border-color: @blue-3;
+@alert-info-bg-color: @blue-1;
+@alert-warning-border-color: @gold-3;
+@alert-warning-bg-color: @gold-1;
+@alert-error-border-color: @red-3;
+@alert-error-bg-color: @red-1;
